--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@ li a:hover:not(.active) {
 <div style="background-image: url('https://unity-img.tbxapis.com/v0/images/b4c85fcc47892808496e99bf44af1be4/content/5f2075c09e282010f8a927e1/b341ed80a5a04cdd901a0d5f979910b7/img.jpg');">
    
 <ul>
-    <li><a class="active" href="file:///D:/Crear%20Pagina/Home/index.html">Home</a></li>
-    <li><a href="file:///D:/Crear%20Pagina/imagenes/images.html">Images</a></li>
-    <li><a href="file:///D:/Crear%20Pagina/Videos/videos.html">Videos</a></li>
-    <li><a href="file:///D:/Crear%20Pagina/More/more.html">More</a></li>
-    <li class="active" style="float:right"><a href="#login">Login</a></li>
-    <li style="float:right"><a href="register">Register</a></li>
+  <li><a class="active" href="https://millerbermeo.github.io/home/">Home</a></li>
+  <li><a href="https://millerbermeo.github.io/imagenes/">Images</a></li>
+  <li><a href="https://millerbermeo.github.io/videos/">Videos</a></li>
+  <li><a href="https://millerbermeo.github.io/more/">More</a></li>
+  <li class="active" style="float:right"><a href="#login">Login</a></li>
+  <li style="float:right">register<a href="register">Register</a></li>
    
 </ul> 
 
