--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ li a:hover:not(.active) {
        <li><a href="https://millerbermeo.github.io/videos/">Videos</a></li>
        <li><a href="https://millerbermeo.github.io/more/">More</a></li>
        <li class="active" style="float:right"><a href="#login">Login</a></li>
-       <li style="float:right">register<a href="#register">Register</a></li>
+       <li style="float:right"><a href="#register">Register</a></li>
    
 </ul> 
 
